turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:7: error: ':' expected but ')' found.
def quart(c) {
           ^DiskFour:19: error: identifier expected but '}' found.
}
^